attempt to fix contrast error 1

--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
 }
 
 .heading2 {
-    color:white;
+    color:rgb(207, 207, 207);
     margin-left:50px;
     margin-top:20px;
     margin-bottom:-40px;
@@ -92,7 +92,7 @@
 }
 
 .quote-footer {
-    color:rgb(214, 214, 214);
+    color:white;
 }
 
 
